Better button spacing in overlay (bug 809987)

--- a/media/css/mkt/overlay.less
+++ b/media/css/mkt/overlay.less
@@ -63,7 +63,7 @@
             width: 100%;
             display: block;
             button {
-                margin: 0 0 0 10px;
+                margin: 10px 0 0;
                 float: right;
             }
         }
